Create  template to comments | Changed application.js

--- a/app/assets/stylesheets/custom/_theme.scss
+++ b/app/assets/stylesheets/custom/_theme.scss
@@ -35,6 +35,11 @@
 
 // Navbar
 
+.comment_image{
+  max-height: 100px;
+  margin-bottom: 10px;
+}
+
 .navbar-inverse {
   padding-top: 30px;
   padding-bottom: 30px;
