--- a/app/assets/stylesheets/advert/_general.scss
+++ b/app/assets/stylesheets/advert/_general.scss
@@ -78,12 +78,15 @@ $footer-sticky-height: 170px;
 }
 
 .margin-top{
-  margin-top: 150px;
-  margin-bottom : 70px;
-  text-align: center;
-  font-size: 17px;
+  position: relative;
+  top: 50px;
+  left: 90%;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 12px;
   color: grey;
 }
+
 
 
 ul.language li {
