--- a/app/views/adverts/show.html.haml
+++ b/app/views/adverts/show.html.haml
@@ -14,3 +14,6 @@
       = link_to 'Edit', edit_advert_path(@advert)
       = link_to 'Back', :back
       = link_to 'Destroy', advert_path(@advert), method: :delete
+  #comments
+    = render partial: 'comments/comments_list', locals: { advert: @advert }
+  = render partial: 'comments/comment_form', locals: { advert: @advert }
