--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$('#comments').html("<%= j render :partial => 'comments/comments_list', :locals => { advert: @advert } %>");
+$('#comments').html("<%= j render :partial => 'comments/comments_list', :locals => { advert: @comment.advert } %>");
