--- a/app/views/users/_sign_up_form.html.haml
+++ b/app/views/users/_sign_up_form.html.haml
@@ -1,5 +1,4 @@
-= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => "general-form"}) do |f|
-  = devise_error_messages!
+= form_for User.new ,url: wizard_path, :html => {:class => "general-form"} do |f|
   .form-group.mb-30
     = f.hidden_field(:role_id, value: Role.first.id)
     %label.control-label.font-weight-light{for: "login"}= t('login')
@@ -14,7 +13,6 @@
     = f.text_field :full_name, autofocus: true, placeholder: t('full_name'), id: "full_name", class: "form-control"
     %label.control-label.font-weight-light{for: "birthday"}= t('birthday')
     = f.date_field :birthday, autofocus: true, placeholder: t('birthday'), id: "birthday", class: "form-control"
-    = render partial: 'address_form', locals: { f: f }
     
   .text-center
-    = f.button t('sign_up'), class: "btn btn-default mb-20"
+    = f.submit 'Next step', class: 'center-block mb-20 btn btn-default'
