--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,10 @@
       .hidden-xs
         %ul.nav.navbar-nav
           %li
+            .search
+              = render partial: 'layouts/search'
+
+          %li
             = link_to t('home'), root_url
           
           - if user_signed_in?
