update adverts controller

--- a/app/views/adverts/index.html.haml
+++ b/app/views/adverts/index.html.haml
@@ -1,5 +1,5 @@
 %main.container
   .mb-120
-    = render partial: 'thumb_wrap', locals: { adverts: @adverts }
+    = render partial: 'thumb_wrap', locals: { adverts: @items }
   
 = link_to 'New Advert', new_advert_path
