--- a/app/views/adverts/edit.html.haml
+++ b/app/views/adverts/edit.html.haml
@@ -1,7 +1,7 @@
 .text-center
   Editing Advert
 
-= render 'form', advert: @advert
+= render 'form', locals: { advert: @advert }
 
 = link_to 'Show', @advert
 = link_to 'Back', adverts_path
