--- a/app/views/comments/_comments_list.html.haml
+++ b/app/views/comments/_comments_list.html.haml
@@ -3,16 +3,19 @@
   .ml-70{id: "comment_#{comment.id}"}
     %div
       .vertical-right
-        = link_to 'Edit', edit_comment_path(comment), class: 'margin-top'
-        = link_to 'Destroy', comment_path(comment), method: :delete, remote: true, class: 'margin-top'
+        - if can? :update, comment
+          = link_to 'Edit', edit_comment_path(comment), class: 'margin-top'
+        - if can? :destroy, comment
+          = link_to 'Destroy', comment_path(comment), method: :delete, remote: true, class: 'margin-top'
       
       .max-240
         .general-message-verified= comment.created_at.strftime("%Y/%m/%d")
         .general-message-verified= t('create_at:')
         .general-message-name= comment.user.full_name
     %p= textile(strip_tags(comment.description)).html_safe
-    = image_tag comment.avatar, class: "comment_image", alt: "design-advert"
-    .general-message-wrap.divider-lg
+    - unless comment.avatar.nil?
+      = image_tag comment.avatar, class: "comment_image", alt: "design-advert"
+      .general-message-wrap.divider-lg
 
 
 
