--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -1,4 +1,3 @@
-
-= render partial: 'form', locals: { comment: @comment }
-
-= link_to 'Back', :back
+- if can? :update, @comment
+  = render partial: 'form', locals: { comment: @comment }
+  = link_to 'Back', :back
