--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,6 +14,8 @@
             .search
               = render partial: 'layouts/search'
           %li
+            = link_to 'Users', show_users_user_path
+          %li
             = link_to t('home'), root_url
           
           - if user_signed_in?
@@ -22,8 +24,7 @@
               %ul.dropdown-menu
                 %li
                   = link_to t('setting'), edit_user_path(address: { user_id: current_user.id })
-                %li
-                  = link_to t('my_adverts'), edit_user_registration_path
+                
                 - if current_user.role.name.eql?('admin')
                   %li
                     = link_to t('admin_panel'), rails_admin.dashboard_path
