--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -7,4 +7,4 @@
       .col-sm-5
         = f.file_field :avatar, input_html: { class: 'form-control' }
       .col-sm-4
-        = f.submit 'Create', class: "btn btn-primary mb-35"
+        = f.submit 'Update', class: "btn btn-primary mb-35"
