--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -33,6 +33,6 @@
                   = link_to t('log_out'), destroy_user_session_path, method: :delete
           - else
             %li
-              = link_to t('sign_in'), new_user_session_path
+              = link_to 'Sign in', new_user_session_path
             %li
-              = link_to t('sign_up'), new_user_path
+              = link_to 'Sign up', new_user_path
