--- a/app/views/adverts/show.html.haml
+++ b/app/views/adverts/show.html.haml
@@ -23,4 +23,4 @@
   - else
     %h3.text-center
       Only registered users can leave comments
-      = link_to t('log_in'), new_user_session_path, class: 'general-title-margin'
+      = link_to 'Log in', new_user_session_path, class: 'general-title-margin'
