--- a/app/views/users/_edit_email_pass.html.haml
+++ b/app/views/users/_edit_email_pass.html.haml
@@ -3,13 +3,13 @@
   = form_for(@user, method: :put, class: "general-form-md") do |f|
     .form-group.mb-30
       = f.label :email, t('new_email'), class: "control-label input-label"
-      = f.email_field :email, placeholder: t("enter_new_email"), class: "form-control"
+      = f.email_field :email, placeholder: "enter_new_email", class: "form-control"
       = f.label :login, t('new_login'), class: "control-label input-label"
-      = f.text_field :login, placeholder: t("enter_new_email"), class: "form-control"
+      = f.text_field :login, placeholder: "enter_new_login", class: "form-control"
       = f.label :full_name, t('new_full_name'), class: "control-label input-label"
-      = f.text_field :full_name, placeholder: t("enter_new_email"), class: "form-control"
+      = f.text_field :full_name, placeholder: "enter_new_full_name", class: "form-control"
       = f.label :birthday, t('new_birthday'), class: "control-label input-label"
-      = f.date_field :birthday, placeholder: t("enter_new_email"), class: "form-control"
+      = f.date_field :birthday, placeholder: "enter_new_birthday", class: "form-control"
     .general-text-align
       = f.submit 'Save user info', class: "btn btn-default mb-20"
 
@@ -18,9 +18,9 @@
   = form_for(@user, method: :put, class: "general-form-md divider-lg-bottom pb-25" ) do |f|
     .form-group.mb-30
       = f.label :password,t('new_password'), class: "control-label input-label"
-      = f.password_field :password, class: "form-control", placeholder: t("new_password")
+      = f.password_field :password, class: "form-control", placeholder: "new_password"
     .form-group.mb-40
       = f.label :password_confirmation, t('password_confirmation'), class: "control-label input-label"
-      = f.password_field :password_confirmation, class: "form-control", placeholder: t("confirm_password")
+      = f.password_field :password_confirmation, class: "form-control", placeholder: "confirm_password"
     .general-text-align
       = f.submit 'Save password', class: "btn btn-default mb-20"
